# Autonomous-Vehicles

./: .gitignore  setup_uv_project.sh
waymo-imitation-rl/: README.md  main.py  pyproject.toml
waymo-imitation-rl/configs/: config.yaml
waymo-imitation-rl/logs/PPO_1/: events.out.tfevents.1763597123.Avi.56730.0
waymo-imitation-rl/scripts/: build_summary.py  convert_batch.py  convert_final.py  convert_manual.py  convert_patch.py  convert_waymo.py  inspect_keys.py  train.py  train_parallel.py  visualize.py
waymo-imitation-rl/src/: algorithms.py  env_wrapper.py  utils.py
